completed all my pre-defined report methods, fixed bugs: forgot to use .add method to add new transaction objects into the arrayList, edited my csv file to include 2025 and month 10